kubernetes/applications/ceph-storage/manifests/semaphore/semaphore-namespace.yml
# =====================================
# 0. Namespace for Semaphore
# =====================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: semaphore
