kubernetes/applications/ceph-storage/manifests/semaphore/semaphore-statefulset.yml

# =====================================
# 4. Semaphore App StatefulSet
# =====================================
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  serviceName: semaphore
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      securityContext:
        fsGroup: 0
      containers:
      - name: semaphore
        image: semaphoreui/semaphore:v2.19.16
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        ports:
        - name: http
          containerPort: 3000
        startupProbe:
          httpGet:
            path: "/"
            port: 3000
          periodSeconds: 10
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: "/"
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: "/"
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 15
        volumeMounts:
        - name: data
          mountPath: /var/lib/semaphore
        - name: config
          mountPath: /etc/semaphore
        - name: tmp
          mountPath: /tmp/semaphore
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: example-rbd-rbd
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 3Gi
  - metadata:
      name: config
    spec:
      storageClassName: example-rbd-rbd
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: tmp
    spec:
      storageClassName: example-rbd-rbd
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
