kubernetes/applications/ceph-storage/manifests/semaphore/semaphore-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore-ingress
  namespace: semaphore
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - semaphore.example.com
  rules:
    - host: semaphore.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore-app
                port:
                  number: 3000
